# collaborative-whiteboard

./: .gitignore  README.md  SETUP.md  package-lock.json
client/: package.json  vite.config.ts
client/src/: App.tsx  api.ts  types.ts
client/src/components/: CursorOverlay.tsx  SelectionHandles.tsx  ShapeRenderer.tsx  Toolbar.tsx  WhiteboardSVG.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useCanvasWs.ts  useWhiteboard.ts
client/src/pages/: CanvasPage.tsx  DashboardPage.tsx  LoginPage.tsx  SignupPage.tsx
server/: pyproject.toml  schema.sql
server/app/: auth.py  main.py  models.py  ws.py
server/app/routers/: auth_router.py  canvases.py  shapes.py
